--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Final</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+
 
 </body>
 </html>
