--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>final</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+
 </head>
-<body>hellp
+<body>
+//= template/header.html
+//= template/footer.html
 </body>
 </html>
