--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,14 @@
 	<meta charset="UTF-8">
 	<title>final</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-
+	<!-- <script type="text/javascript" src="js/swiper.js"></script>
+	<script type="text/javascript" src="js/slider.js"></script> -->
 </head>
 <body>
 //= template/header.html
+//= template/galery.html
+//= template/partner.html
+
 //= template/footer.html
 </body>
 </html>
