--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 	<meta charset="UTF-8">
 	<title>Final</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
+<!-- 	<script type="text/javascript" src="js/masonry.pkgd.min.js"></script> -->
+	<script type="text/javascript" src="js/tmpl.js"></script>
+
+	<script type="text/javascript" src ="js/jquery-1.11.1.min.js"></script>
+
+
+	<script type="text/javascript" src="js/slider.js"></script>
+
+
 </head>
 <body>
 
