--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,24 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<title>final</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<!-- <script type="text/javascript" src="js/swiper.js"></script>
-	<script type="text/javascript" src="js/slider.js"></script> -->
+	<!-- <script type="text/javascript" src ="js/jquery-1.11.1.min.js"></script> -->
+
+	<script type="text/javascript" src="js/tmpl.js"></script>
+	<script type="text/javascript" src="js/masonry.pkgd.js"></script>
+	<script type="text/javascript" src ="js/jquery-1.11.1.min.js"></script>
+
+
+	<script type="text/javascript" src="js/main.js"></script>
+
 </head>
 <body>
 //= template/header.html
 //= template/galery.html
 //= template/partner.html
-
+//= template/ideas.html
 //= template/footer.html
 </body>
 </html>
